Updated autosymlink feature

--- a/.README.md.html
+++ b/.README.md.html
@@ -639,7 +639,7 @@ function setDocumentScrollTop(ypos)
 
 </head>
 <body class="markdown-body">
-<h1> <a id="user-content-osa-maven-configuration-module" class="anchor" href="#osa-maven-configuration-module" aria-hidden="true"><span class="octicon octicon-link"></span></a>OSA Maven Configuration module</h1> 
+<h1> <a id="user-content-osa-maven-root-module" class="anchor" href="#osa-maven-root-module" aria-hidden="true"><span class="octicon octicon-link"></span></a>OSA Maven Root module</h1> 
 <h2> <a id="user-content-whats-osa" class="anchor" href="#whats-osa" aria-hidden="true"><span class="octicon octicon-link"></span></a>What's OSA?</h2> 
 <p>OSA stands for Open Simulation Architecture.</p> 
 <p>OSA is primarily intended to be a federating platform for the simulation community: it is designed to favour the integration of new or existing contributions at every level of its architecture.</p> 
